--- a/.github/workflows/update-swagger-docs.yml
+++ b/.github/workflows/update-swagger-docs.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Get latest swagger JSON and update it for prod display.
         run: |
           curl https://stagingapi.smokeball.com/swagger/docs/swagger.json > ./reference/swagger.json
-          sed 's/stagingapi.smokeball.com/api.smokeball.com/g' > ./reference/swagger.json
-          sed 's/Staging API/API/g' ./reference/swagger.json > ./reference/swagger.json
+          sed -i 's/stagingapi.smokeball.com/api.smokeball.com/g' ./reference/swagger.json
+          sed -i 's/Staging API/API/g' ./reference/swagger.json ./reference/swagger.json
 
       - name: Commit and push changes
         run: |
