Update update-swagger-docs.yml on schedule

--- a/.github/workflows/update-swagger-docs.yml
+++ b/.github/workflows/update-swagger-docs.yml
@@ -1,6 +1,8 @@
 name: Update Swagger Docs
 on:
   workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * *' # Every day at midnight
 
 jobs:
   job1:
